# LLM_Based_terminal

./: .gitignore  README.md  SHELL_INTEGRATION.md  WARP.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  README.md  export_request.json  index.css  requirements.txt  test_request.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: accessibility.rs  advanced_commands.rs  advanced_terminal.rs  ai.rs  ansi.rs  clipboard_manager.rs  commands.rs  dev_tools.rs  execution_context.rs  filesystem_manager.rs  lib.rs  network_manager.rs  performance_monitor.rs  plugins.rs  process_manager.rs  pty.rs  search.rs  security.rs  session_manager.rs  settings.rs  shell_hooks.rs  shell_integration.rs  telemetry.rs  terminal.rs  terminal_types.rs  theme_manager.rs  workflows.rs
src/components/: AIPanel.tsx  AdvancedFeatures.tsx  CommandCompletion.tsx  CommandHistory.tsx  PaneLayout.tsx  ScrollbackResults.tsx  SearchOverlay.tsx  SettingsPanel.tsx  Terminal.tsx  WorkflowsPanel.tsx
