[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.4", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.0", features = ["full"] }
vte = "0.13"
crossterm = "0.28"
uuid = { version = "1.0", features = ["v4", "serde"] }
portable-pty = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
gethostname = "0.4"
notify = "6.1"
arboard = "3.3"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processenv", "wincon", "handleapi", "fileapi"] }
winsafe = "0.0.19"

[target.'cfg(unix)'.dependencies]
nix = "0.26"
